# aoc-2025

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/day01/: main.rs
src/day02/: main.rs
src/day02/snapshots/: day02__tests__all_splits@111.snap  day02__tests__all_splits@1111.snap  day02__tests__all_splits@111111.snap  day02__tests__all_splits@11111111.snap  day02__tests__all_splits@111111111.snap  day02__tests__all_splits@1111111111.snap  day02__tests__all_splits@111111111111.snap  day02__tests__slice_int@1234[2:1].snap  day02__tests__slice_int@1234[3:2]-2.snap  day02__tests__slice_int@1234[4:2].snap  day02__tests__slice_int@1[0:0].snap
src/day03/: main.rs
src/day04/: main.rs
src/day05/: main.rs
src/day06/: main.rs
src/day07/: main.rs
src/day08/: main.rs
